--- a/.gitmodules
+++ b/.gitmodules
@@ -101,3 +101,6 @@
 [submodule "frozen/RoboticsMasters_educar"]
 	path = frozen/RoboticsMasters_educar
 	url = https://github.com/peterpanstechland/RoboticsMasters_educar.git
+[submodule "frozen/RoboticsMasters_CircuitPython_MPU9250"]
+        path = frozen/RoboticsMasters_CircuitPython_MPU9250
+        url = https://github.com/peterpanstechland/RoboticsMasters_CircuitPython_MPU9250.git
